
0.2.0

* Fixed bug when reading page version with gePagelist

0.1.0