@@ -1,6 +1,7 @@
 
 0.2.0
 
+* Added getPageVersions(String pageId)
 * Fixed bug when reading page version with gePagelist
 
 0.1.0
